[package]
name = "assert_contains_cli"
version = "0.1.0"
authors = ["Pascal Seitz <pascal.seitz@sap.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "assert_contains"
path = "src/bin/assert_contains.rs"